--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html style="background-color:#181011">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>
             adityeahhhh's stuff
         </title>
