--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1024">
     <title>Jeopardy</title>
     <style>
         @font-face {
