--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             text-align: right;
             text-shadow: 0 0 75px rgba(255, 255, 255, 0.35);
             text-decoration: none;
-            float: right;
-            clear: ce;
+            float: center;
+            clear: center;
             margin-right: 20px;
         }
     </style>
